@startuml
!theme reddress-darkred

skinparam packageStyle folder
skinparam shadowing true
skinparam linetype ortho
skinparam classAttributeIconSize 0

package Domain #3F3031 {

  package User #3B0000 {
    class User << (E, #902813) Entity >> {
      - id: UUID
      - username: string
      - passwordHash: string
      - name: string
      - lastName: string
      - email: string
    }

    class Student << (E, #902813) Entity >> {
      - currentSemester: int
    }

    class Teacher << (E, #902813) Entity >> {
      - academicDepartment: string
    }

    class Secretary << (E, #902813) Entity >> {
      - officeLocation: string
    }

    class Admin << (E, #902813) Entity >> {
      - accessLevel: int
    }
  }

  package Course #3B0000 {
    class Course << (A, #FF7700) Aggregate Root >> {
      - id: UUID
      - name: string
      - code: string
    }

    class Syllabus << (V, #90EE90) Value Object >> {
      - description: string
      - evaluationCriteria: string
      - bibliography: List<string>
    }

    class SyllabusTopic << (V, #90EE90) Value Object >> {
      - week: int
      - title: string
      - description: string
      - teacher: UUID
    }
  }

  package AcademicOffering #3B0000 {
    class CourseSection << (A, #FF7700) Aggregate Root >> {
      - id: UUID
      - groupCode: string
      - capacity: int
    }

    class ScheduleSlot << (V, #90EE90) Value Object >> {
      - type: ScheduleType
      - day: DayOfWeek
      - startTime: Time
      - endTime: Time
      - classroomId: UUID
    }

    enum ScheduleType {
      THEORY
      PRACTICE
      LABORATORY
    }

    enum DayOfWeek {
      MONDAY
      TUESDAY
      WEDNESDAY
      THURSDAY
      FRIDAY
    }
  }

  package SharedResources #3B0000 {
    class Classroom << (A, #FF7700) Aggregate Root >> {
      - id: UUID
      - name: string
      - type: ClassroomType
      - capacity: int
    }

    enum ClassroomType {
      PHYSICAL
      VIRTUAL
    }
  }
}

Student <|-- User
Teacher <|-- User
Secretary <|-- User
Admin <|-- User

Course "1" o-- "1" Syllabus
Syllabus "1" *-- "1..*" SyllabusTopic


Course "1" -- "1..*" CourseSection

CourseSection "1" -- "1" Teacher

CourseSection "1" *-- "1..*" ScheduleSlot

CourseSection "0..*" -- "0..*" Student

ScheduleSlot ..> Classroom : "se realiza en"

@enduml
